# elementPDF

./: Cargo.toml  README.md  index.html  pdf.json
src/: elements.rs  lib.rs  main.rs
src/elements/: image.rs  line.rs  paragraph.rs  rectangle.rs  text.rs
