[package]
name = "pdfjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
base64 = { version = "0.21.7", features = [] }
json = "0.12.4"
image = "0.24.8"
palette = "0.7.4"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
rusttype  = "0.9.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }