[package]
name = "pdfjs"
version = "0.1.0"
edition = "2021"
authors = ["Nkhangweni Mulelu <n.mulelu@gmail.com>"]
description = "an element driven version of printpdf[rust] using json as build instruction"
repository = "https://github.com/nkhanks/elementPDF"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
serde_bytes = "0.11.9"
base64 = { version = "0.21.7", features = [] }
json = "0.12.4"
image = "0.24.8"
palette = "0.7.4"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
rusttype  = "0.9.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }